--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # --- Django and REST ---
 Django==5.2.6
 djangorestframework==3.16.1
+django-cors-headers
 
 # --- Deployment ---
 gunicorn
@@ -12,8 +13,8 @@ psycopg2-binary
 numpy==2.3.2
 pandas==2.3.2
 opencv-contrib-python==4.10.0.84
-scikit-learn     # add exact version if you used one
-tensorflow       # only if you’re actually using it
+scikit-learn==1.5.2       # ✅ added explicit version
+tensorflow==2.17.0        # ✅ pin to stable version you tested
 
 # --- OCR / ML ---
 paddleocr==3.2.0
@@ -22,38 +23,16 @@ shapely==2.1.1
 pyclipper==1.3.0.post6
 
 # --- Utilities ---
-requests==2.32.5
-pillow==11.3.0
+requests==2.32.3
+pillow==11.0.0
 PyJWT==2.10.1
 pycryptodome==3.23.0
 deprecation==2.1.0
-email_validator
-flask
-flask-cors
-flask-sqlalchemy
-gunicorn
-psycopg2-binary
-supabase
-werkzeug
-deprecation
-dj-database-url
-Django==5.2.6
-django-cors-headers
-djangorestframework==3.16.1
-email-validator
-gunicorn
-numpy
-opencv-contrib-python
-paddleocr
-paddlex
-pandas
-pillow
-psycopg2-binary
-pyclipper
-pycryptodome
-PyJWT
-requests
-scikit-learn
-shapely
-tensorflow
-whitenoise
+email-validator==2.2.0
+
+# --- Optional (if you really use Flask/Supabase together with Django) ---
+flask==3.0.3
+flask-cors==5.0.0
+flask-sqlalchemy==3.1.1
+supabase==2.5.0
+werkzeug==3.0.4
